--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,6 @@
 node_modules
 dist
 build
-.env
 .env.local
 *.log
 .DS_Store
@@ -10,7 +9,6 @@ coverage
 .idea
 *.swp
 *.swo
-pnpm-lock.yaml
-
-**/*.js
-.claude/
+.git
+.gitignore
+README.md
