--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,14 @@ services:
   db:
     image: postgres:16-alpine
     container_name: hukbaek-db
-    environment:
-      POSTGRES_DB: black_and_white
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d black_and_white"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -24,15 +22,8 @@ services:
       context: .
       dockerfile: apps/backend/Dockerfile.dev
     container_name: hukbaek-backend
-    environment:
-      DATABASE_HOST: db
-      DATABASE_PORT: 5432
-      DATABASE_USER: user
-      DATABASE_PASSWORD: pass
-      DATABASE_NAME: black_and_white
-      NODE_ENV: development
-      PORT: 4000
-      FRONTEND_URL: http://localhost:5173
+    env_file:
+      - .env
     ports:
       - "4000:4000"
     volumes:
@@ -52,9 +43,8 @@ services:
       context: .
       dockerfile: apps/frontend/Dockerfile.dev
     container_name: hukbaek-frontend
-    environment:
-      VITE_API_BASE: http://localhost:4000/api
-      VITE_WS_URL: http://localhost:4000
+    env_file:
+      - .env
     ports:
       - "5173:5173"
     volumes:
