--- a/apps/frontend/Dockerfile.dev
+++ b/apps/frontend/Dockerfile.dev
@@ -16,6 +16,7 @@ COPY apps/frontend/package.json ./apps/frontend/package.json
 COPY apps/frontend/tsconfig.json ./apps/frontend/tsconfig.json
 COPY apps/frontend/tsconfig.node.json ./apps/frontend/tsconfig.node.json
 COPY apps/frontend/vite.config.ts ./apps/frontend/vite.config.ts
+COPY apps/frontend/svelte.config.js ./apps/frontend/svelte.config.js
 
 # 의존성 설치
 RUN pnpm install
