--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,17 +9,16 @@
   },
   "dependencies": {
     "@shared/types": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
     "socket.io-client": "^4.6.1",
-    "zustand": "^4.4.7"
+    "svelte": "^4.2.8",
+    "svelte-spa-router": "^4.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
     "sass": "^1.69.5",
+    "svelte-check": "^3.6.2",
+    "svelte-preprocess": "^5.1.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
