--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -10,7 +10,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -19,8 +18,10 @@
     "paths": {
       "@/*": ["src/*"],
       "@shared/*": ["../../packages/shared/*"]
-    }
+    },
+    "types": ["svelte"]
   },
-  "include": ["src"],
+  "include": ["src/**/*.ts", "src/**/*.svelte"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
