--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
         condition: service_healthy
     command: sh -c "cd /app/packages/shared && pnpm build && cd /app/apps/backend && pnpm dev"
 
-  # Frontend (React + Vite)
+  # Frontend (Svelte + Vite)
   frontend:
     build:
       context: .
