--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
+    mem_limit: 256m
+    mem_reservation: 128m
 
   # Backend (NestJS)
   backend:
@@ -36,6 +39,9 @@ services:
       db:
         condition: service_healthy
     command: sh -c "cd /app/packages/shared && pnpm build && cd /app/apps/backend && pnpm dev"
+    restart: unless-stopped
+    mem_limit: 256m
+    mem_reservation: 128m
 
   # Frontend (Svelte + Vite)
   frontend:
@@ -56,6 +62,9 @@ services:
     depends_on:
       - backend
     command: sh -c "cd /app/apps/frontend && pnpm dev --host"
+    restart: unless-stopped
+    mem_limit: 256m
+    mem_reservation: 128m
 
 volumes:
   postgres_data:
