--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 
 services:
-  # PostgreSQL Database
-  db:
-    image: postgres:16-alpine
-    container_name: hukbaek-db
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    mem_limit: 200m
-    mem_reservation: 100m
-
-  # Backend (NestJS)
+  # Backend (NestJS) - Neon DB 사용으로 로컬 DB 제거
   backend:
     build:
       context: .
@@ -35,13 +16,12 @@ services:
       - /app/node_modules
       - /app/apps/backend/node_modules
       - /app/packages/shared/node_modules
-    depends_on:
-      db:
-        condition: service_healthy
     command: sh -c "cd /app/packages/shared && pnpm build && cd /app/apps/backend && pnpm dev"
     restart: unless-stopped
-    mem_limit: 550m
-    mem_reservation: 400m
+    mem_limit: 600m
+    mem_reservation: 450m
+    environment:
+      - NODE_OPTIONS=--max-old-space-size=512
 
   # Frontend (Svelte + Vite)
   frontend:
@@ -63,8 +43,7 @@ services:
       - backend
     command: sh -c "cd /app/apps/frontend && pnpm dev --host"
     restart: unless-stopped
-    mem_limit: 300m
-    mem_reservation: 200m
-
-volumes:
-  postgres_data:
+    mem_limit: 350m
+    mem_reservation: 250m
+    environment:
+      - NODE_OPTIONS=--max-old-space-size=300
