chore: GitHub Pages 배포 설정

--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,7 @@ PORT=4000
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
+
+# Frontend (for build time)
+VITE_API_BASE=https://your-server-domain.com/api
+VITE_WS_URL=https://your-server-domain.com
