--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Build frontend
         run: cd apps/frontend && pnpm build
         env:
-          # GitHub Pages용 base path 설정
-          VITE_BASE_URL: /black-and-white/
+          # GitHub Pages용 base path 설정 (repo 이름과 일치해야 함)
+          VITE_BASE_URL: /hukbaek/
           # 백엔드 API 엔드포인트 (Repository Secrets에서 설정)
           VITE_API_BASE: ${{ secrets.VITE_API_BASE }}
           VITE_WS_URL: ${{ secrets.VITE_WS_URL }}
