chore: 프론트엔드 수동 배포 버튼 생성

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,6 +8,7 @@ on:
       - 'apps/frontend/**'
       - 'packages/shared/**'
       - '.github/workflows/deploy-frontend.yml'
+  workflow_dispatch:  # 수동 실행 트리거 추가
 
 # GitHub Pages 배포 권한 설정
 permissions:
